version/2023.2/_sources/user_guide.rst.txt
User guide
==========

User guides for the different ``pyansys`` packages can be found in their specific documentation.
The ``pyansys`` metapackage itself has no functionalities on its own. It is only a bundle of the
different public PyAnsys libraries that are compatible with a given Ansys Unified Install depending
on the version requested.

****************************
PyAnsys packages user guides
****************************

.. grid:: 3

    .. grid-item-card:: PyAEDT
      :img-top: _static/thumbnails/pyaedt.png
      :link: https://aedt.docs.pyansys.com/version/0.6/User_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyAnsys Math
      :img-top: _static/thumbnails/pyansys-math.png
      :link: https://math.docs.pyansys.com/version/0.1/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyDPF - Core
      :img-top: _static/thumbnails/pydpf-core.png
      :link: https://dpf.docs.pyansys.com/version/0.8/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyDPF - Post
      :img-top: _static/thumbnails/pydpf-post.png
      :link: https://post.docs.pyansys.com/version/0.4/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyDPF - Composites
      :img-top: _static/thumbnails/pydpf-composites.png
      :link: https://composites.dpf.docs.pyansys.com/version/0.2/intro.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyDynamicReporting
      :img-top: _static/thumbnails/pydynamicreporting.png
      :link: https://dynamicreporting.docs.pyansys.com/version/0.4/userguide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyEnSight
      :img-top: _static/thumbnails/pyensight.png
      :link: https://ensight.docs.pyansys.com/version/0.5/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyFluent
      :img-top: _static/thumbnails/pyfluent.png
      :link: https://fluent.docs.pyansys.com/version/0.14/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyFluent - Parametric
      :img-top: _static/thumbnails/pyfluent-parametric.png
      :link: https://parametric.fluent.docs.pyansys.com/version/0.7/users_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyFluent - Visualization
      :img-top: _static/thumbnails/pyfluent-visualization.png
      :link: https://visualization.fluent.docs.pyansys.com/version/0.7/users_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyMAPDL
      :img-top: _static/thumbnails/pymapdl.png
      :link: https://mapdl.docs.pyansys.com/version/0.64/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyMAPDL Reader
      :img-top: _static/thumbnails/pymapdl.png
      :link: https://reader.docs.pyansys.com/version/0.52/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyMechanical
      :img-top: _static/thumbnails/pymechanical.png
      :link: https://mechanical.docs.pyansys.com/version/0.8/index.html#background
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyMotorCAD
      :img-top: _static/thumbnails/pymotorcad.png
      :link: https://motorcad.docs.pyansys.com/version/0.1/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyOptislang
      :img-top: _static/thumbnails/pyoptislang.png
      :link: https://optislang.docs.pyansys.com/version/0.2/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyPIM
      :img-top: _static/thumbnails/intro.png
      :link: https://pypim.docs.pyansys.com/version/dev/index.html#getting-started
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyPrimeMesh
      :img-top: _static/thumbnails/pyprimemesh.png
      :link: https://prime.docs.pyansys.com/version/0.4/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PySeascape
      :img-top: _static/thumbnails/intro.png
      :link: https://seascape.docs.pyansys.com/version/0.1/#usage
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PySherlock
      :img-top: _static/thumbnails/pysherlock.png
      :link: https://sherlock.docs.pyansys.com/version/0.2/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PySystemCoupling
      :img-top: _static/thumbnails/pysystem-coupling.png
      :link: https://systemcoupling.docs.pyansys.com/version/0.1/users_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: PyTwin
      :img-top: _static/thumbnails/pytwin.png
      :link: https://twin.docs.pyansys.com/version/0.3/user_guide/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: Granta MI BoM Analytics
      :img-top: _static/thumbnails/intro.png
      :link: https://bomanalytics.grantami.docs.pyansys.com/version/1.1/getting_started/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: Granta MI RecordLists
      :img-top: _static/thumbnails/intro.png
      :link: https://recordlists.grantami.docs.pyansys.com/version/1.0/getting_started/index.html
      :text-align: center
      :class-title: pyansys-card-title

    .. grid-item-card:: Shared Components - OpenAPI Common
      :img-top: _static/thumbnails/intro.png
      :link: https://openapi.docs.pyansys.com/index.html
      :text-align: center
      :class-title: pyansys-card-title
